...
        textView.font = UIFont.clawline(.bodyText)
        textView.allowsEditingTextAttributes = true
#if !os(visionOS)
        textView.keyboardDismissMode = .none
#endif
        textView.returnKeyType = .send
        textView.accessibilityIdentifier = "compose-text-view"
        textView.accessibilityLabel = "Compose message"
        textView.tintColor = tintColor
        textView.textColor = textColor
        textView.autocorrectionType = .yes
        textView.smartQuotesType = .yes
        textView.smartDashesType = .yes
...
